--- a/src/index.css
+++ b/src/index.css
@@ -11,15 +11,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  flex: 1 1 auto;
+  flex: 0 1 auto;
   min-width: 25%;
   margin: 10px 10px;
+  padding: 10px;
   border: 1px gray solid;
   border-radius: 10px;
 }
 
 .pokedex {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   margin: 10px 10px;
 }
