bonus 4 - pokedex cria os botoes de filtro dinamicamente

--- a/src/components/Pokedex/styles.css
+++ b/src/components/Pokedex/styles.css
@@ -4,3 +4,16 @@
   flex-wrap: wrap;
   margin: 10px 10px;
 }
+
+.filters {
+  display: flex;
+  justify-content: space-between;
+  margin: 8px;
+  padding: 8px;
+}
+
+.control {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
