--- a/src/components/Pokedex/styles.css
+++ b/src/components/Pokedex/styles.css
@@ -12,8 +12,18 @@
   padding: 8px;
 }
 
+.btn-filter {
+  background-color: orange;
+  color: white;
+}
+
 .control {
   display: flex;
   justify-content: center;
   gap: 8px;
+}
+
+.btn-control {
+  background-color: green;
+  color: white;
 }
